# orejava

./: README.md  pom.xml
native/: CMakeLists.txt  flags.h  ore_blk.c  ore_jni_wrapper.c  oreencodings.c  oreencodings.h  test_ore.cpp
src/main/java/ch/ethz/dsg/ore/: ORE.java
src/test/java/: ORETest.java
